implement the meppar form type for HVDC LCC